# gaps

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-project.sh  gaps.sh  plots.conf  runcode.sh  rungaps  rungaps.py  test1.csv  test2.csv
cpp-shower/: .gitignore  CMakeLists.txt  main.cpp
cpp-shower/base/: CMakeLists.txt
cpp-shower/base/include/: base.h  event.h  histogram.h  parton.h  prng.h  qcd.h  vec4.h
cpp-shower/base/src/: prng.cpp
cpp-shower/include/: base.h  histogram.h  matrix.h  observables.h  parton.h  qcd.h  shower.h  vec4.h
cpp-shower/matrix/: CMakeLists.txt
cpp-shower/matrix/include/: matrix.h
cpp-shower/matrix/src/: matrix.cpp
cpp-shower/observables/: CMakeLists.txt
cpp-shower/observables/include/: breitframe.h  dalitz.h  eventshapes.h  jetrates.h  mczinc.h  observables.h
cpp-shower/observables/src/: breitframe.cpp  dalitz.cpp  eventshapes.cpp  jetrates.cpp  mczinc.cpp  observables.cpp
cpp-shower/shower/: CMakeLists.txt
cpp-shower/shower/include/: shower.h
cpp-shower/shower/src/: colours.cpp  kinematics.cpp  shower.cpp  shower_kinematics.cpp  splittings.cpp
cpp-shower/src/: main.cpp  matrix.cpp  observables.cpp  shower.cpp
doc/: README.md  gaps-diagrams.pptx
doc/extra/: acceptveto.csv  acceptveto.py  energy.py  gaps.sh  loPointKernel.csv  splittings-test.cuh  versioncontrol.py
doc/sections/: code-structure.md  getting-started.md  matrix-element.md  observables.md  parton-shower.md  validation.md
doc/tutorials/: basicExample.cu  parallelFor.cu  saxpy.cu
gaps/: CMakeLists.txt  README.md  compare.py  main.cu
gaps/base/: CMakeLists.txt
gaps/base/include/: base.cuh  event.cuh  histogram.cuh  parton.cuh  prng.cuh  qcd.cuh  vec4.cuh
gaps/base/src/: base.cu  histogram.cu  qcd.cu
gaps/cpu-shower/: CMakeLists.txt  main.cpp
gaps/cpu-shower/base/include/: base.h  event.h  histogram.h  particle.h  pdf.h  prng.h  qcd.h  vec4.h
gaps/cpu-shower/base/src/: prng.cpp
gaps/cpu-shower/matrix/include/: matrix.h
gaps/cpu-shower/matrix/src/: lep_lo.cpp  lep_nlo.cpp  lhc_lo.cpp  lhc_nlo.cpp  me2.cpp
gaps/cpu-shower/observables/include/: eventshapes.h  jets.h  mczinc.h  observables.h
gaps/cpu-shower/observables/src/: eventshapes.cpp  jets.cpp  mczinc.cpp  observables.cpp
gaps/cpu-shower/shower/include/: shower.h
gaps/cpu-shower/shower/src/: boundaries.cpp  colours.cpp  jacobian.cpp  kinematics.cpp  pdfratio.cpp  shower.cpp  splittings.cpp
gaps/gpu-shower/: CMakeLists.txt  main.cu
gaps/gpu-shower/base/include/: base.cuh  event.cuh  histogram.cuh  particle.cuh  pdf.cuh  prng.cuh  qcd.cuh  vec4.cuh
gaps/gpu-shower/base/src/: base.cu  histogram.cu  pdf.cu  qcd.cu
gaps/gpu-shower/matrix/include/: matrix.cuh
gaps/gpu-shower/matrix/src/: lep_lo.cu  lep_nlo.cu  lhc_lo.cu  lhc_nlo.cu  matrix.cu  me2.cu
gaps/gpu-shower/observables/include/: eventshapes.cuh  jets.cuh  mczinc.cuh  observables.cuh
gaps/gpu-shower/observables/src/: eventshapes.cu  jets.cu  mczinc.cu  observables.cu
gaps/gpu-shower/shower/include/: shower.cuh
gaps/gpu-shower/shower/src/: boundaries.cu  colours.cu  jacobian.cu  kinematics.cu  pdfratio.cu  shower.cu  splittings.cu
gaps/include/: base.cuh  histogram.cuh  matrix.cuh  qcd.cuh  vec4.cuh
gaps/interface/: __init__.py  compile.py  lhapdf_gpu.py  logo.py  run.py
gaps/lhapdf-gpu/: Cu1Dinterpolators.h  CuInterpolator.h  CuPDF.h  activate.sh  lhapdf-kokkos_version.tar.bz2
gaps/matrix/: CMakeLists.txt
gaps/matrix/include/: matrix.cuh
gaps/matrix/src/: matrix.cu
gaps/observables/: CMakeLists.txt
gaps/observables/include/: dalitz.cuh  eventshapes.cuh  jetrates.cuh  observables.cuh
gaps/observables/src/: dalitz.cu  eventshapes.cu  jetrates.cu  observables.cu
gaps/shower/: CMakeLists.txt
gaps/shower/include/: colours.cuh  kinematics.cuh  shower.cuh  shower_kinematics.cuh  splittings.cuh
gaps/shower/src/: colours.cu  shower.cu  shower_colours.cu  shower_kinematics.cu
gaps/src/: base.cu  matrix.cu  qcd.cu  shower.cu
include/: base.cuh  durham.h  eshape.h  etflow.h  histogram.cuh  histogram.h  jetmbr.h  matrix.cuh  observables.cuh  particle.cuh  parton.cuh  qcd.cuh  qcd.h  shower.cuh  shower.h  thrust.h  vec4.cuh
src/: base.cu  durham.cpp  eshape.cpp  etflow.cpp  histogram.cpp  histogram.cu  jetmbr.cpp  main.cu  matrix.cu  observables.cu  particle.cu  qcd.cpp  qcd.cu  shower.cpp  shower.cu  thrust.cpp  vec4.cu
test/: README.md  SH-Tutorial-NLO.yoda  SH-Tutorial.yoda  average-metrics.py  cluster.sh  completedevents.sh  executiontime.py  mplstyleerc  partitioning-and-tuning.py  pdf-evaluations.cu  plot-completedevents.py  plot-executiontime.py  plot-partitioning.py  plot-pdfratios.py  plots-command.sh  plots.conf  profiling-to-latex.py  rivet-command.sh  run-nll  time-and-energy.py  tuning.py
test/Herwig/: GAPS_LEP.cc  GAPS_LHC.cc  LEP.in  LEPNLO.in  LHC.in  LHCNLO.in  herwig-for-gaps.diff  herwig-lep.yoda  herwig-lepnlo.yoda  herwig-lhc.yoda  herwig-lhcnlo.yoda  runherwig.sh  yoda-fixer.py
test/SH-Tutorial/: SH-Tutorial-NLO.yoda  SH-Tutorial.yoda  note.txt
